--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+.student{
+  border:2px solid aqua;
+  border-radius: 5px;
+  padding:20px;
+  margin: 10px;
+  
+}
